modified pipeline for ref obj evaluation ignoring new objects + some visualizations

--- a/matching/data_overview.ipynb
+++ b/matching/data_overview.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -219,74 +219,47 @@
      "output_type": "stream",
      "text": [
       "Precision AVG\n",
-      "K-Means          1         3         5         7         9         11        13\n",
-      "Threshold                                                                      \n",
-      "-0.9       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
-      "-0.8       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
-      "-0.7       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
-      "-0.6       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
-      "-0.5       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
-      "-0.4       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
-      "-0.3       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
-      "-0.2       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
-      "-0.1       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
-      " 0.0       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
-      " 0.1       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
-      " 0.2       0.518263  0.522098  0.528438  0.533570  0.534483  0.533894  0.538226\n",
-      " 0.3       0.516894  0.520360  0.526134  0.530781  0.531490  0.530266  0.534155\n",
-      " 0.4       0.506356  0.507992  0.510885  0.513466  0.512596  0.509921  0.509786\n",
-      " 0.5       0.481252  0.477706  0.478273  0.478311  0.475616  0.471965  0.470268\n",
-      " 0.6       0.439317  0.430544  0.427032  0.423930  0.418777  0.413156  0.409741\n",
-      " 0.7       0.367450  0.350364  0.340279  0.332123  0.322276  0.313385  0.305761\n",
-      " 0.8       0.216026  0.191945  0.172819  0.154396  0.143573  0.134600  0.126440\n",
-      " 0.9       0.049537  0.043914  0.041417  0.037297  0.036500  0.036186  0.035882\n",
+      "K-Means           1         3         5         7         9\n",
+      "Threshold                                                  \n",
+      "0.0        0.533158  0.529221  0.553915  0.545244  0.544522\n",
+      "0.1        0.533158  0.529221  0.553915  0.545244  0.544522\n",
+      "0.2        0.533158  0.529221  0.553932  0.545281  0.544561\n",
+      "0.3        0.533829  0.530057  0.555210  0.547008  0.546535\n",
+      "0.4        0.543906  0.541271  0.568719  0.562894  0.564513\n",
+      "0.5        0.600755  0.602476  0.623718  0.634239  0.638050\n",
+      "0.6        0.687616  0.691132  0.710841  0.718110  0.719572\n",
+      "0.7        0.736110  0.728188  0.734297  0.729740  0.726409\n",
+      "0.8        0.594896  0.548540  0.510593  0.474795  0.440435\n",
+      "0.9        0.088823  0.053290  0.035263  0.025267  0.016984\n",
       "\n",
       "Recall AVG\n",
-      "K-Means          1         3         5         7         9         11        13\n",
-      "Threshold                                                                      \n",
-      "-0.9       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
-      "-0.8       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
-      "-0.7       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
-      "-0.6       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
-      "-0.5       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
-      "-0.4       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
-      "-0.3       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
-      "-0.2       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
-      "-0.1       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
-      " 0.0       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
-      " 0.1       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
-      " 0.2       0.512152  0.517285  0.519312  0.519380  0.518312  0.515261  0.514378\n",
-      " 0.3       0.512377  0.517519  0.519726  0.519915  0.518912  0.515833  0.514989\n",
-      " 0.4       0.514810  0.520208  0.522680  0.522851  0.522297  0.519223  0.518537\n",
-      " 0.5       0.519072  0.521223  0.523328  0.522166  0.520605  0.516764  0.515168\n",
-      " 0.6       0.503609  0.499516  0.496933  0.492098  0.487352  0.481499  0.477991\n",
-      " 0.7       0.440670  0.424079  0.412721  0.400887  0.389046  0.378365  0.368779\n",
-      " 0.8       0.263436  0.235873  0.211627  0.191348  0.177358  0.165539  0.155024\n",
-      " 0.9       0.056165  0.048927  0.045716  0.041370  0.040401  0.039971  0.039635\n",
+      "K-Means           1         3         5         7         9\n",
+      "Threshold                                                  \n",
+      "0.0        0.525859  0.530160  0.540304  0.530809  0.529399\n",
+      "0.1        0.525859  0.530160  0.540304  0.530809  0.529399\n",
+      "0.2        0.525859  0.530160  0.540304  0.530809  0.529399\n",
+      "0.3        0.525859  0.530161  0.540262  0.530788  0.529371\n",
+      "0.4        0.525264  0.529414  0.538645  0.528998  0.527825\n",
+      "0.5        0.521193  0.523237  0.522659  0.519127  0.515817\n",
+      "0.6        0.496047  0.491661  0.484821  0.477617  0.470524\n",
+      "0.7        0.423467  0.405669  0.392797  0.380405  0.370331\n",
+      "0.8        0.253719  0.218465  0.194333  0.167919  0.152226\n",
+      "0.9        0.021491  0.012300  0.007864  0.005611  0.003444\n",
       "\n",
       "F1 AVG\n",
-      "K-Means          1         3         5         7         9         11        13\n",
-      "Threshold                                                                      \n",
-      "-0.9       0.496098  0.500758  0.504814  0.507107  0.507191  0.505427  0.506168\n",
-      "-0.8       0.496098  0.500758  0.504814  0.507107  0.507191  0.505427  0.506168\n",
-      "-0.7       0.496098  0.500758  0.504814  0.507107  0.507191  0.505427  0.506168\n",
-      "-0.6       0.496098  0.500758  0.504814  0.507107  0.507191  0.505427  0.506168\n",
-      "-0.5       0.496098  0.500758  0.504814  0.507107  0.507191  0.505427  0.506168\n",
-      "-0.4       0.496098  0.500758  0.504814  0.507107  0.507191  0.505427  0.506168\n",
-      "-0.3       0.496098  0.500758  0.504814  0.507107  0.507191  0.505427  0.506168\n",
-      "-0.2       0.496098  0.500758  0.504814  0.507107  0.507191  0.505427  0.506168\n",
-      "-0.1       0.496098  0.500758  0.504814  0.507107  0.507191  0.505427  0.506168\n",
-      " 0.0       0.496098  0.500758  0.504814  0.507107  0.507191  0.505427  0.506168\n",
-      " 0.1       0.496098  0.500758  0.504814  0.507107  0.507191  0.505427  0.506168\n",
-      " 0.2       0.496086  0.500740  0.504778  0.507059  0.507130  0.505358  0.506062\n",
-      " 0.3       0.495418  0.499886  0.503675  0.505690  0.505692  0.503567  0.504066\n",
-      " 0.4       0.490184  0.493715  0.495899  0.496756  0.495988  0.493098  0.492469\n",
-      " 0.5       0.476940  0.476144  0.476969  0.475953  0.473721  0.470064  0.468429\n",
-      " 0.6       0.446509  0.440160  0.436782  0.432683  0.427826  0.422358  0.418987\n",
-      " 0.7       0.380255  0.364327  0.354113  0.344505  0.334263  0.325081  0.317102\n",
-      " 0.8       0.225596  0.201868  0.181381  0.163615  0.151995  0.142223  0.133485\n",
-      " 0.9       0.050826  0.044800  0.042117  0.037952  0.037116  0.036765  0.036454\n",
-      "The highest F1 score is 0.5072, achieved at threshold -0.9 and K-Means value 9.\n"
+      "K-Means           1         3         5         7         9\n",
+      "Threshold                                                  \n",
+      "0.0        0.509288  0.510055  0.526083  0.517301  0.516610\n",
+      "0.1        0.509288  0.510055  0.526083  0.517301  0.516610\n",
+      "0.2        0.509288  0.510055  0.526089  0.517317  0.516627\n",
+      "0.3        0.509707  0.510569  0.526823  0.518305  0.517752\n",
+      "0.4        0.515149  0.516522  0.533554  0.526033  0.526726\n",
+      "0.5        0.537804  0.539865  0.548409  0.550673  0.550236\n",
+      "0.6        0.555960  0.553321  0.555076  0.551876  0.547003\n",
+      "0.7        0.514393  0.496448  0.488254  0.476553  0.466883\n",
+      "0.8        0.335309  0.294368  0.265173  0.234279  0.213472\n",
+      "0.9        0.033161  0.019142  0.012345  0.008776  0.005478\n",
+      "The highest F1 score is 0.5560, achieved at threshold 0.6 and K-Means value 1.\n"
      ]
     }
    ],
@@ -303,7 +276,7 @@
     "final_f1 = []\n",
     "\n",
     "# Access the contents\n",
-    "filepath = \"/media/ekoller/T7/Results/median/statistics_0.45.pkl\"\n",
+    "filepath = \"/media/ekoller/T7/Results/avg/ref_obj_0.45.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
@@ -314,39 +287,39 @@
     "final_recall.extend(cosine_iou_metric_recall)\n",
     "final_f1.extend(cosine_metric_f1)\n",
     "\n",
-    "filepath = \"/media/ekoller/T7/Results/median/statistics_45.90.pkl\"\n",
-    "with open(filepath, 'rb') as file:\n",
-    "    result = pickle.load(file)\n",
+    "# filepath = \"/media/ekoller/T7/Results/median/statistics_45.90.pkl\"\n",
+    "# with open(filepath, 'rb') as file:\n",
+    "#     result = pickle.load(file)\n",
     "\n",
-    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
-    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
-    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
-    "final_precision.extend(cosine_iou_metric_precision)\n",
-    "final_recall.extend(cosine_iou_metric_recall)\n",
-    "final_f1.extend(cosine_metric_f1)\n",
+    "# cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "# cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "# cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "# final_precision.extend(cosine_iou_metric_precision)\n",
+    "# final_recall.extend(cosine_iou_metric_recall)\n",
+    "# final_f1.extend(cosine_metric_f1)\n",
     "\n",
     "\n",
-    "filepath = \"/media/ekoller/T7/Results/median/statistics_90.135.pkl\"\n",
-    "with open(filepath, 'rb') as file:\n",
-    "    result = pickle.load(file)\n",
+    "# filepath = \"/media/ekoller/T7/Results/median/statistics_90.135.pkl\"\n",
+    "# with open(filepath, 'rb') as file:\n",
+    "#     result = pickle.load(file)\n",
     "\n",
-    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
-    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
-    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
-    "final_precision.extend(cosine_iou_metric_precision)\n",
-    "final_recall.extend(cosine_iou_metric_recall)\n",
-    "final_f1.extend(cosine_metric_f1)\n",
+    "# cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "# cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "# cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "# final_precision.extend(cosine_iou_metric_precision)\n",
+    "# final_recall.extend(cosine_iou_metric_recall)\n",
+    "# final_f1.extend(cosine_metric_f1)\n",
     "\n",
-    "filepath = \"/media/ekoller/T7/Results/median/statistics_135.180.pkl\"\n",
-    "with open(filepath, 'rb') as file:\n",
-    "    result = pickle.load(file)\n",
+    "# filepath = \"/media/ekoller/T7/Results/median/statistics_135.180.pkl\"\n",
+    "# with open(filepath, 'rb') as file:\n",
+    "#     result = pickle.load(file)\n",
     "\n",
-    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
-    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
-    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
-    "final_precision.extend(cosine_iou_metric_precision)\n",
-    "final_recall.extend(cosine_iou_metric_recall)\n",
-    "final_f1.extend(cosine_metric_f1)\n",
+    "# cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "# cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "# cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "# final_precision.extend(cosine_iou_metric_precision)\n",
+    "# final_recall.extend(cosine_iou_metric_recall)\n",
+    "# final_f1.extend(cosine_metric_f1)\n",
     "\n",
     "# # Print to check the values\n",
     "# print(\"Cosine IoU Metric Precision:\", np.mean(cosine_iou_metric_precision, axis=0))\n",
@@ -357,8 +330,8 @@
     "final_recall = np.mean(final_recall, axis=0)\n",
     "final_f1= np.mean(final_f1, axis= 0)\n",
     "\n",
-    "k_means= [1,3,5,7,9,11,13]\n",
-    "threshold= [-0.9,-0.8,-0.7,-0.6,-0.5,-0.4,-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7,0.8,0.9]\n",
+    "k_means=  [1,3,5,7,9] #[1,3,5,7,9,11,13]\n",
+    "threshold= [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7,0.8,0.9] #[-0.9,-0.8,-0.7,-0.6,-0.5,-0.4,-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7,0.8,0.9]\n",
     "\n",
     "# Create a DataFrame for each metric\n",
     "df_precision = pd.DataFrame(final_precision, index=threshold, columns=k_means)\n",
