sketch jupiter notebooks

--- a/matching/data_overview.ipynb
+++ b/matching/data_overview.ipynb
@@ -211,55 +211,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision AVG\n",
-      "K-Means           1         3         5         7         9\n",
-      "Threshold                                                  \n",
-      "0.0        0.533158  0.529221  0.553915  0.545244  0.544522\n",
-      "0.1        0.533158  0.529221  0.553915  0.545244  0.544522\n",
-      "0.2        0.533158  0.529221  0.553932  0.545281  0.544561\n",
-      "0.3        0.533829  0.530057  0.555210  0.547008  0.546535\n",
-      "0.4        0.543906  0.541271  0.568719  0.562894  0.564513\n",
-      "0.5        0.600755  0.602476  0.623718  0.634239  0.638050\n",
-      "0.6        0.687616  0.691132  0.710841  0.718110  0.719572\n",
-      "0.7        0.736110  0.728188  0.734297  0.729740  0.726409\n",
-      "0.8        0.594896  0.548540  0.510593  0.474795  0.440435\n",
-      "0.9        0.088823  0.053290  0.035263  0.025267  0.016984\n",
-      "\n",
-      "Recall AVG\n",
-      "K-Means           1         3         5         7         9\n",
-      "Threshold                                                  \n",
-      "0.0        0.525859  0.530160  0.540304  0.530809  0.529399\n",
-      "0.1        0.525859  0.530160  0.540304  0.530809  0.529399\n",
-      "0.2        0.525859  0.530160  0.540304  0.530809  0.529399\n",
-      "0.3        0.525859  0.530161  0.540262  0.530788  0.529371\n",
-      "0.4        0.525264  0.529414  0.538645  0.528998  0.527825\n",
-      "0.5        0.521193  0.523237  0.522659  0.519127  0.515817\n",
-      "0.6        0.496047  0.491661  0.484821  0.477617  0.470524\n",
-      "0.7        0.423467  0.405669  0.392797  0.380405  0.370331\n",
-      "0.8        0.253719  0.218465  0.194333  0.167919  0.152226\n",
-      "0.9        0.021491  0.012300  0.007864  0.005611  0.003444\n",
-      "\n",
-      "F1 AVG\n",
-      "K-Means           1         3         5         7         9\n",
-      "Threshold                                                  \n",
-      "0.0        0.509288  0.510055  0.526083  0.517301  0.516610\n",
-      "0.1        0.509288  0.510055  0.526083  0.517301  0.516610\n",
-      "0.2        0.509288  0.510055  0.526089  0.517317  0.516627\n",
-      "0.3        0.509707  0.510569  0.526823  0.518305  0.517752\n",
-      "0.4        0.515149  0.516522  0.533554  0.526033  0.526726\n",
-      "0.5        0.537804  0.539865  0.548409  0.550673  0.550236\n",
-      "0.6        0.555960  0.553321  0.555076  0.551876  0.547003\n",
-      "0.7        0.514393  0.496448  0.488254  0.476553  0.466883\n",
-      "0.8        0.335309  0.294368  0.265173  0.234279  0.213472\n",
-      "0.9        0.033161  0.019142  0.012345  0.008776  0.005478\n",
-      "The highest F1 score is 0.5560, achieved at threshold 0.6 and K-Means value 1.\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/media/ekoller/T7/Results/median/new_obj_0.45.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Access the contents\u001b[39;00m\n\u001b[1;32m     13\u001b[0m filepath \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/media/ekoller/T7/Results/median/new_obj_0.45.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m     15\u001b[0m     result \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[1;32m     17\u001b[0m cosine_iou_metric_precision \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcosine_iou_metric_precision\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/media/ekoller/T7/Results/median/new_obj_0.45.pkl'"
      ]
     }
    ],
@@ -276,7 +240,7 @@
     "final_f1 = []\n",
     "\n",
     "# Access the contents\n",
-    "filepath = \"/media/ekoller/T7/Results/avg/ref_obj_0.45.pkl\"\n",
+    "filepath = \"/media/ekoller/T7/Results/median/new_obj_0.45.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
@@ -287,41 +251,41 @@
     "final_recall.extend(cosine_iou_metric_recall)\n",
     "final_f1.extend(cosine_metric_f1)\n",
     "\n",
-    "# filepath = \"/media/ekoller/T7/Results/median/statistics_45.90.pkl\"\n",
-    "# with open(filepath, 'rb') as file:\n",
-    "#     result = pickle.load(file)\n",
+    "filepath = \"/media/ekoller/T7/Results/median/new_obj_45.90.pkl\"\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
     "\n",
-    "# cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
-    "# cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
-    "# cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
-    "# final_precision.extend(cosine_iou_metric_precision)\n",
-    "# final_recall.extend(cosine_iou_metric_recall)\n",
-    "# final_f1.extend(cosine_metric_f1)\n",
+    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "final_precision.extend(cosine_iou_metric_precision)\n",
+    "final_recall.extend(cosine_iou_metric_recall)\n",
+    "final_f1.extend(cosine_metric_f1)\n",
     "\n",
     "\n",
-    "# filepath = \"/media/ekoller/T7/Results/median/statistics_90.135.pkl\"\n",
-    "# with open(filepath, 'rb') as file:\n",
-    "#     result = pickle.load(file)\n",
+    "filepath = \"/media/ekoller/T7/Results/median/new_obj_90.135.pkl\"\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
     "\n",
-    "# cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
-    "# cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
-    "# cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
-    "# final_precision.extend(cosine_iou_metric_precision)\n",
-    "# final_recall.extend(cosine_iou_metric_recall)\n",
-    "# final_f1.extend(cosine_metric_f1)\n",
+    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "final_precision.extend(cosine_iou_metric_precision)\n",
+    "final_recall.extend(cosine_iou_metric_recall)\n",
+    "final_f1.extend(cosine_metric_f1)\n",
     "\n",
-    "# filepath = \"/media/ekoller/T7/Results/median/statistics_135.180.pkl\"\n",
-    "# with open(filepath, 'rb') as file:\n",
-    "#     result = pickle.load(file)\n",
+    "filepath = \"/media/ekoller/T7/Results/median/new_obj_135.180.pkl\"\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
     "\n",
-    "# cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
-    "# cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
-    "# cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
-    "# final_precision.extend(cosine_iou_metric_precision)\n",
-    "# final_recall.extend(cosine_iou_metric_recall)\n",
-    "# final_f1.extend(cosine_metric_f1)\n",
+    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "final_precision.extend(cosine_iou_metric_precision)\n",
+    "final_recall.extend(cosine_iou_metric_recall)\n",
+    "final_f1.extend(cosine_metric_f1)\n",
     "\n",
-    "# # Print to check the values\n",
+    "# Print to check the values\n",
     "# print(\"Cosine IoU Metric Precision:\", np.mean(cosine_iou_metric_precision, axis=0))\n",
     "# print(\"Cosine IoU Metric Recall:\", np.mean(cosine_iou_metric_recall, axis=0))\n",
     "# print(\"Cosine Metric F1:\", np.mean(cosine_metric_f1, axis= 0))\n",
