letting train evaluation run for the 3d and added depth anything reop but the approach did not work out bc z buffering

--- a/matching/data_overview.ipynb
+++ b/matching/data_overview.ipynb
@@ -211,19 +211,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/media/ekoller/T7/Results/median/new_obj_0.45.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Access the contents\u001b[39;00m\n\u001b[1;32m     13\u001b[0m filepath \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/media/ekoller/T7/Results/median/new_obj_0.45.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m     15\u001b[0m     result \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[1;32m     17\u001b[0m cosine_iou_metric_precision \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcosine_iou_metric_precision\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/media/ekoller/T7/Results/median/new_obj_0.45.pkl'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision AVG\n",
+      "K-Means           1         3         5         7         9\n",
+      "Threshold                                                  \n",
+      "0.0        0.518240  0.522107  0.528529  0.533686  0.534552\n",
+      "0.1        0.518240  0.522107  0.528529  0.533686  0.534552\n",
+      "0.2        0.518241  0.522108  0.528543  0.533712  0.534572\n",
+      "0.3        0.519501  0.523668  0.530908  0.536613  0.538072\n",
+      "0.4        0.535291  0.542058  0.552823  0.561181  0.565110\n",
+      "0.5        0.595574  0.602519  0.621707  0.633655  0.639639\n",
+      "0.6        0.683622  0.690456  0.707279  0.716123  0.719916\n",
+      "0.7        0.735711  0.731498  0.736287  0.735970  0.729001\n",
+      "0.8        0.585417  0.536411  0.495403  0.448814  0.417479\n",
+      "0.9        0.070321  0.041725  0.026799  0.013771  0.009413\n",
+      "\n",
+      "Recall AVG\n",
+      "K-Means           1         3         5         7         9\n",
+      "Threshold                                                  \n",
+      "0.0        0.534577  0.539919  0.542121  0.542059  0.541109\n",
+      "0.1        0.534577  0.539919  0.542121  0.542059  0.541109\n",
+      "0.2        0.534577  0.539919  0.542119  0.542056  0.541109\n",
+      "0.3        0.534462  0.539769  0.542064  0.542004  0.541040\n",
+      "0.4        0.533625  0.538608  0.540232  0.539566  0.538534\n",
+      "0.5        0.527386  0.528614  0.529632  0.527417  0.525214\n",
+      "0.6        0.500870  0.495701  0.492387  0.486687  0.481546\n",
+      "0.7        0.427255  0.409111  0.396391  0.383498  0.370531\n",
+      "0.8        0.234085  0.204793  0.179367  0.158400  0.143526\n",
+      "0.9        0.018061  0.010668  0.007331  0.002952  0.001972\n",
+      "\n",
+      "F1 AVG\n",
+      "K-Means           1         3         5         7         9\n",
+      "Threshold                                                  \n",
+      "0.0        0.503708  0.508486  0.512652  0.514987  0.515134\n",
+      "0.1        0.503708  0.508486  0.512652  0.514987  0.515134\n",
+      "0.2        0.503709  0.508487  0.512658  0.514998  0.515144\n",
+      "0.3        0.504403  0.509332  0.513963  0.516633  0.517126\n",
+      "0.4        0.512726  0.518828  0.524958  0.528526  0.530127\n",
+      "0.5        0.538442  0.542779  0.550916  0.554491  0.555772\n",
+      "0.6        0.556638  0.555442  0.558000  0.556790  0.554129\n",
+      "0.7        0.516673  0.500175  0.490031  0.479013  0.466134\n",
+      "0.8        0.314423  0.277637  0.246748  0.219110  0.199677\n",
+      "0.9        0.027377  0.016192  0.010951  0.004711  0.003179\n",
+      "The highest F1 score is 0.5580, achieved at threshold 0.6 and K-Means value 5.\n"
      ]
     }
    ],
