completely done with the adaptation

--- a/sceneGraph_update/result_overview.ipynb
+++ b/sceneGraph_update/result_overview.ipynb
@@ -100,7 +100,6 @@
     }
    ],
    "source": [
-    "#look at the mask data\n",
     "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -340,6 +339,163 @@
     "plot_heatmap(df_f1, 'F1 Score - Voxel Overlap IoU >= ' + threshold)\n",
     "plot_heatmap(df_boxes, 'Box IoU Heatmap')\n",
     "plot_heatmap_distance(df_centers, 'Center Distance - Voxel Overlap IoU >= ' + threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#to access the testresults\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os.path as osp\n",
+    "import os.path as osp\n",
+    "import sys\n",
+    "import os\n",
+    "import h5py\n",
+    "import os.path as osp\n",
+    "\n",
+    "threshold = \"0.1\"\n",
+    "final_precision = []\n",
+    "final_recall = []\n",
+    "final_f1 = []\n",
+    "final_boxes = []\n",
+    "final_centers = []\n",
+    "\n",
+    "best_scenes = []\n",
+    "best_f1scores = []\n",
+    "best_precisions = []\n",
+    "best_recalls = []\n",
+    "best_distances = []\n",
+    "          \n",
+    "                    \n",
+    "# Access the contents\n",
+    "filepath = osp.join(\"/media/ekoller/T7/center_statistics\", threshold, \"test_ref_obj_statistics_test.pkl\")\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
+    "\n",
+    "final_precision.append(result.get(\"precision\", None))\n",
+    "final_recall.append(result.get(\"recall\", None))\n",
+    "final_f1.append(result.get(\"f1\", None))\n",
+    "final_boxes.append(result.get( \"iou_boxes\", None))\n",
+    "final_centers.append(result.get(\"mean_center_difference\", None))\n",
+    "best_scenes.append(result.get(\"s_scene\", None))\n",
+    "best_f1scores.append(result.get(\"s_f1\", None))\n",
+    "best_precisions.append(result.get(\"s_precision\", None))\n",
+    "best_recalls.append(result.get(\"s_recall\", None))\n",
+    "best_distances.append(result.get(\"s_distance\", None))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "minimum_votes = [3] #[2] #[1,2,3,4,5,6,7,8,9]\n",
+    "minimum_points = [45] #[35] #[5,10,15,20,25,30,35,40,45,50,60,70,80,90]\n",
+    "\n",
+    "\n",
+    "# Create a DataFrame for each metric\n",
+    "df_precision = pd.DataFrame(final_precision[0], index=minimum_points, columns=minimum_votes)\n",
+    "df_recall = pd.DataFrame(final_recall[0], index=minimum_points, columns=minimum_votes)\n",
+    "df_f1 = pd.DataFrame(final_f1[0], index=minimum_points, columns=minimum_votes)\n",
+    "df_boxes = pd.DataFrame(final_boxes[0], index=minimum_points, columns=minimum_votes)\n",
+    "df_centers = pd.DataFrame(final_centers[0], index=minimum_points, columns=minimum_votes)\n",
+    "\n",
+    "# Set index and column labels for better readability\n",
+    "df_precision.index.name = 'Poitns'\n",
+    "df_precision.columns.name = 'Votes'\n",
+    "\n",
+    "df_recall.index.name = 'Points'\n",
+    "df_recall.columns.name = 'Votes'\n",
+    "\n",
+    "df_f1.index.name = 'Poitns'\n",
+    "df_f1.columns.name = 'Votes'\n",
+    "\n",
+    "df_boxes.index.name = 'Poitns'\n",
+    "df_boxes.columns.name = 'Votes'\n",
+    "\n",
+    "df_centers.index.name = 'Poitns'\n",
+    "df_centers.columns.name = 'Votes'\n",
+    "\n",
+    "# Set Pandas options to display without wrapping\n",
+    "pd.set_option('display.max_columns', None)  # Ensure all columns are shown\n",
+    "pd.set_option('display.width', None)        # Make display width flexible\n",
+    "pd.set_option('display.expand_frame_repr', False)  # Prevent wrapping\n",
+    "\n",
+    "\n",
+    "# Display the tables\n",
+    "print(\"Precision\")\n",
+    "print(df_precision)\n",
+    "print(\"\\nRecall\")\n",
+    "print(df_recall)\n",
+    "print(\"\\nF1\")\n",
+    "print(df_f1)\n",
+    "print(\"\\nBox IoU\")\n",
+    "print(df_boxes)\n",
+    "print(\"\\nCenter Distance\")\n",
+    "print(df_centers)\n",
+    "\n",
+    "\n",
+    "best_f1_value = -1\n",
+    "best_scene_f1 = None\n",
+    "best_precision_value = None\n",
+    "best_recall = None\n",
+    "best_center = None\n",
+    "\n",
+    "# Iterate through the F1 scores to find the best scene\n",
+    "for i in range(len(best_f1scores)):\n",
+    "    if best_f1scores[i] > best_f1_value:\n",
+    "        # Found a new maximum F1 score\n",
+    "        best_f1_value = best_f1scores[i]\n",
+    "        best_scene_f1 = best_scenes[i]\n",
+    "        best_precision_value = best_precisions[i]\n",
+    "        best_recall = best_recalls[i]\n",
+    "        best_center = best_distances[i]\n",
+    "    elif best_f1scores[i] == best_f1_value:\n",
+    "        # If F1 score is the same, check for precision\n",
+    "        if best_precisions[i] > best_precision_value:\n",
+    "            best_scene_f1 = best_scenes[i]\n",
+    "            best_precision_value = best_precisions[i]\n",
+    "            best_recall = best_recalls[i]\n",
+    "            best_center = best_distances[i]\n",
+    "\n",
+    "# Output the results\n",
+    "print(\"The best scene in regards to F1 score is\", best_scene_f1,\n",
+    "      \"with F1 Score\", best_f1_value,\n",
+    "      \", Precision\", best_precision_value,\n",
+    "      \", Recall\", best_recall,\n",
+    "      \", Distance\", best_center)\n",
+    "\n",
+    "best_precision_value = -1\n",
+    "best_scene_precision = None\n",
+    "best_f1_value = None\n",
+    "best_recall = None\n",
+    "best_center = None\n",
+    "\n",
+    "#for precision\n",
+    "for i in range(len(best_precisions)):\n",
+    "    if best_precisions[i] > best_precision_value:\n",
+    "        # Found a new maximum precision\n",
+    "        best_precision_value = best_precisions[i]\n",
+    "        best_scene_precision = best_scenes[i]\n",
+    "        best_f1_value = best_f1scores[i]\n",
+    "        best_recall = best_recalls[i]\n",
+    "        best_center = best_distances[i]\n",
+    "    elif best_precisions[i] == best_precision_value:\n",
+    "        # If precision is the same, check for recall\n",
+    "        if best_recalls[i] > best_recall:\n",
+    "            best_scene_precision = best_scenes[i]\n",
+    "            best_f1_value = best_f1scores[i]\n",
+    "            best_recall = best_recalls[i]\n",
+    "            best_center = best_distances[i]\n",
+    "\n",
+    "# Output the results\n",
+    "print(\"The best scene in regards to precision is\", best_scene_precision,\n",
+    "      \"with Precision\", best_precision_value,\n",
+    "      \", F1 Score\", best_f1_value,\n",
+    "      \", Recall\", best_recall,\n",
+    "      \", Distance\", best_center)"
    ]
   },
   {
